# kagebunshin

./: CMakeLists.txt  README.md  sonar-project.properties
.github/: SECURITY.md
.github/workflows/: cmake.yml  coverage.yml
input/: lorem_ipsum.txt  one_love.txt
input/subdir/: william_shakespeare.txt
src/: ConcurrentQueue.h  Logger.cpp  Logger.h  TextFinder.cpp  TextFinder.h  ThreadPool.cpp  ThreadPool.h  main.cpp
tests/: CMakeLists.txt  ConcurrentQueueTests.cpp  ConcurrentQueueTests.h  LoggerTests.cpp  LoggerTests.h  TextFinderTests.cpp  TextFinderTests.h  ThreadPoolTests.cpp  ThreadPoolTests.h
